Updated to Python 3 compatible

--- a/GraphSearch.ipynb
+++ b/GraphSearch.ipynb
@@ -148,14 +148,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Simple graph adj list: {'A': ['B', 'C'], 'C': ['B', 'D'], 'B': ['E'], 'E': ['B', 'D'], 'D': []}\n",
+      "Simple graph adj list: {'A': ['B', 'C'], 'B': ['E'], 'C': ['B', 'D'], 'D': [], 'E': ['B', 'D']}\n",
       "Running dijkstra's...\n",
       "Dijkstra's succeeded in 4 iterations\n",
       "Path in simple graph: ['A', 'C', 'D']\n"
@@ -163,6 +163,8 @@
     }
    ],
    "source": [
+    "from __future__ import print_function,division\n",
+    "\n",
     "#dijkstra's algorithm\n",
     "import heapq  #for a fast priority queue implementation\n",
     "\n",
@@ -213,7 +215,7 @@
     "        nnodes += 1\n",
     "        if v == g:\n",
     "            #found a path\n",
-    "            if verbose: print \"Dijkstra's succeeded in\",nnodes,\"iterations\"\n",
+    "            if verbose: print(\"Dijkstra's succeeded in\",nnodes,\"iterations\")\n",
     "            return predecessor_traverse(p,s,g)\n",
     "        for w in G.neighbors(v):\n",
     "            dcand = d[v] + cost(v,w)   #this is the cost of going through v to w\n",
@@ -228,19 +230,19 @@
     "                #put w on the queue\n",
     "                heapq.heappush(Q,(dcand,w))\n",
     "    #no path found\n",
-    "    if verbose: print \"Dijkstra's failed in\",nnodes,\"iterations\"\n",
+    "    if verbose: print(\"Dijkstra's failed in\",nnodes,\"iterations\")\n",
     "    return None\n",
     "\n",
     "G = AdjListGraph(['A','B','C','D','E'],[('A','B'),('A','C'),('C','B'),('C','D'),('B','E'),('E','B'),('E','D')])\n",
-    "print \"Simple graph adj list:\",G.edges\n",
-    "print \"Running dijkstra's...\"\n",
+    "print(\"Simple graph adj list:\",G.edges)\n",
+    "print(\"Running dijkstra's...\")\n",
     "path = dijkstras(G,'A','D')\n",
-    "print \"Path in simple graph:\",path"
+    "print(\"Path in simple graph:\",path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -256,8 +258,8 @@
     "def make_grid_graph(M,N):\n",
     "    \"\"\"Makes a grid graph\"\"\"\n",
     "    G = AdjListGraph([],[])\n",
-    "    for i in xrange(M):\n",
-    "        for j in xrange(N):\n",
+    "    for i in range(M):\n",
+    "        for j in range(N):\n",
     "            n = (i,j)\n",
     "            G.vertices.append(n)\n",
     "            G.edges[n] = []\n",
@@ -273,7 +275,7 @@
     "\n",
     "G = make_grid_graph(10,10)\n",
     "path = dijkstras(G,(0,0),(5,5))\n",
-    "print \"Path on grid from (0,0) to (5,5):\",path"
+    "print(\"Path on grid from (0,0) to (5,5):\",path)"
    ]
   },
   {
@@ -303,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +381,7 @@
     "        nnodes += 1\n",
     "        if v == g:\n",
     "            #found a path\n",
-    "            if verbose: print \"A* succeeded in\",nnodes,\"iterations\"\n",
+    "            if verbose: print(\"A* succeeded in\",nnodes,\"iterations\")\n",
     "            return predecessor_traverse(p,s,g)\n",
     "        for w in G.neighbors(v):\n",
     "            dcand = d[v] + cost(v,w)   #this is the cost of going through v to w\n",
@@ -394,7 +396,7 @@
     "                #put w back on the queue, with the heuristic value as its priority\n",
     "                heapq.heappush(Q,(dcand+heuristic(w),-dcand,w))\n",
     "    #no path found\n",
-    "    if verbose: print \"A* failed in\",nnodes,\"iterations\"\n",
+    "    if verbose: print(\"A* failed in\",nnodes,\"iterations\")\n",
     "    return None\n",
     "\n",
     "import math\n",
@@ -407,14 +409,14 @@
     "    \"\"\"Euclidean distance heuristic\"\"\"\n",
     "    return math.sqrt((x[0]-goal[0])**2+(x[1]-goal[1])**2)\n",
     "path = astar(G,start,goal,heuristic=h1)\n",
-    "print \"Path, heuristic 1:\",path\n",
+    "print(\"Path, heuristic 1:\",path)\n",
     "\n",
     "display(Markdown(\"### Manhattan distance heuristic\"))\n",
     "def h2(x):\n",
     "    \"\"\"Manhattan distance heuristic\"\"\"\n",
     "    return abs(x[0]-goal[0])+abs(x[1]-goal[1])\n",
     "path = astar(G,start,goal,heuristic=h2)\n",
-    "print \"Path, heuristic 2:\",path"
+    "print(\"Path, heuristic 2:\",path)"
    ]
   },
   {
@@ -446,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +468,7 @@
      "output_type": "stream",
      "text": [
       "A* succeeded in 116171 iterations\n",
-      "Path length 101 cost 10.0\n"
+      "Path length 101 cost 9.99999999999998\n"
      ]
     },
     {
@@ -486,7 +488,7 @@
      "output_type": "stream",
      "text": [
       "A* succeeded in 6886 iterations\n",
-      "Path length 101 cost 10.0\n"
+      "Path length 101 cost 9.99999999999998\n"
      ]
     },
     {
@@ -506,7 +508,7 @@
      "output_type": "stream",
      "text": [
       "A* succeeded in 108 iterations\n",
-      "Path length 101 cost 10.0\n"
+      "Path length 101 cost 9.99999999999998\n"
      ]
     },
     {
@@ -526,7 +528,7 @@
      "output_type": "stream",
      "text": [
       "A* succeeded in 68441 iterations\n",
-      "Path length 51 cost 7.07106781187\n"
+      "Path length 51 cost 7.071067811865471\n"
      ]
     },
     {
@@ -546,7 +548,7 @@
      "output_type": "stream",
      "text": [
       "A* succeeded in 51 iterations\n",
-      "Path length 51 cost 7.07106781187\n"
+      "Path length 51 cost 7.071067811865471\n"
      ]
     },
     {
@@ -566,7 +568,7 @@
      "output_type": "stream",
      "text": [
       "A* succeeded in 51 iterations\n",
-      "Path length 51 cost 7.07106781187\n"
+      "Path length 51 cost 7.071067811865471\n"
      ]
     }
    ],
@@ -606,7 +608,7 @@
     "        nnodes += 1\n",
     "        if gtest(v):\n",
     "            #found a path\n",
-    "            if verbose: print \"A* succeeded in\",nnodes,\"iterations\"\n",
+    "            if verbose: print(\"A* succeeded in\",nnodes,\"iterations\")\n",
     "            return predecessor_traverse(p,s,v)\n",
     "        for w in successors(v):\n",
     "            dcand = d[v] + cost(v,w)   #this is the cost of going through v to w\n",
@@ -621,7 +623,7 @@
     "                #put w back on the queue, with the heuristic value as its priority\n",
     "                heapq.heappush(Q,(dcand+heuristic(w),-dcand,w))\n",
     "    #no path found\n",
-    "    if verbose: print \"A* failed in\",nnodes,\"iterations\"\n",
+    "    if verbose: print(\"A* failed in\",nnodes,\"iterations\")\n",
     "    return None\n",
     "\n",
     "import math\n",
@@ -659,39 +661,39 @@
     "\n",
     "display(Markdown(\"### Dijkstra, implicit graph\"))\n",
     "path = astar_implicit(successors,start,goaltest,cost=length_cost)\n",
-    "print \"Path length\",len(path),\"cost\",sum(length_cost(a,b) for (a,b) in zip(path[:-1],path[1:]))\n",
+    "print(\"Path length\",len(path),\"cost\",sum(length_cost(a,b) for (a,b) in zip(path[:-1],path[1:])))\n",
     "\n",
     "display(Markdown(\"### Euclidean heuristic, implicit graph\"))\n",
     "def h1(x):\n",
     "    \"\"\"Euclidean distance heuristic\"\"\"\n",
     "    return math.sqrt((x[0]-goal[0])**2+(x[1]-goal[1])**2)\n",
     "path = astar_implicit(successors,start,goaltest,cost=length_cost,heuristic=h1)\n",
-    "print \"Path length\",len(path),\"cost\",sum(length_cost(a,b) for (a,b) in zip(path[:-1],path[1:]))\n",
+    "print(\"Path length\",len(path),\"cost\",sum(length_cost(a,b) for (a,b) in zip(path[:-1],path[1:])))\n",
     "\n",
     "display(Markdown(\"### Manhattan heuristic, implicit graph\"))\n",
     "def h2(x):\n",
     "    \"\"\"Manhattan distance heuristic\"\"\"\n",
     "    return abs(x[0]-goal[0])+abs(x[1]-goal[1])\n",
     "path = astar_implicit(successors,start,goaltest,cost=length_cost,heuristic=h2)\n",
-    "print \"Path length\",len(path),\"cost\",sum(length_cost(a,b) for (a,b) in zip(path[:-1],path[1:]))\n",
+    "print(\"Path length\",len(path),\"cost\",sum(length_cost(a,b) for (a,b) in zip(path[:-1],path[1:])))\n",
     "\n",
     "display(Markdown(\"### Dijkstra, 8-connected implicit graph\"))\n",
     "path = astar_implicit(successors_8connected,start,goaltest,cost=length_cost)\n",
-    "print \"Path length\",len(path),\"cost\",sum(length_cost(a,b) for (a,b) in zip(path[:-1],path[1:]))\n",
+    "print(\"Path length\",len(path),\"cost\",sum(length_cost(a,b) for (a,b) in zip(path[:-1],path[1:])))\n",
     "\n",
     "display(Markdown(\"### Euclidean heuristic, 8-connected implicit graph\"))\n",
     "def h1(x):\n",
     "    \"\"\"Euclidean distance heuristic\"\"\"\n",
     "    return math.sqrt((x[0]-goal[0])**2+(x[1]-goal[1])**2)\n",
     "path = astar_implicit(successors_8connected,start,goaltest,cost=length_cost,heuristic=h1)\n",
-    "print \"Path length\",len(path),\"cost\",sum(length_cost(a,b) for (a,b) in zip(path[:-1],path[1:]))\n",
+    "print(\"Path length\",len(path),\"cost\",sum(length_cost(a,b) for (a,b) in zip(path[:-1],path[1:])))\n",
     "\n",
     "display(Markdown(\"### Manhattan heuristic, 8-connected implicit graph\"))\n",
     "def h2(x):\n",
     "    \"\"\"Manhattan distance heuristic\"\"\"\n",
     "    return abs(x[0]-goal[0])+abs(x[1]-goal[1])\n",
     "path = astar_implicit(successors_8connected,start,goaltest,cost=length_cost,heuristic=h2)\n",
-    "print \"Path length\",len(path),\"cost\",sum(length_cost(a,b) for (a,b) in zip(path[:-1],path[1:]))"
+    "print(\"Path length\",len(path),\"cost\",sum(length_cost(a,b) for (a,b) in zip(path[:-1],path[1:])))"
    ]
   },
   {
@@ -726,21 +728,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.1"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
