--- a/NumericalErrors.ipynb
+++ b/NumericalErrors.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -48,14 +48,16 @@
      "text": [
       "0.3333333333333333\n",
       "3.3333333333333335\n",
-      "-4.4408920985e-16\n"
+      "-4.440892098500626e-16\n"
      ]
     }
    ],
    "source": [
-    "print repr(1.0/3.0)   #we use repr to show all digits, because plain print truncates the output\n",
-    "print repr(10.0/3.0)\n",
-    "print (1.0/3.0)*10.0 - 10.0/3.0"
+    "from __future__ import print_function # needed for Python 2 / 3 compatibility\n",
+    "\n",
+    "print(repr(1.0/3.0))   #we use repr to show all digits, because plain print truncates the output\n",
+    "print(repr(10.0/3.0))\n",
+    "print((1.0/3.0)*10.0 - 10.0/3.0)"
    ]
   },
   {
@@ -96,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -128,8 +130,8 @@
     }
    ],
    "source": [
+    "from __future__ import division  #Needed for Python 2/3 compatibility, in case you give integers to quad\n",
     "import math\n",
-    "from __future__ import division  #in case you give integers to quad\n",
     "\n",
     "def quad1(a,b,c):\n",
     "    \"\"\"Returns a tuple of 0, 1, or 2 solutions to the quadratic equation a^2 x + b x + c = 0\"\"\"\n",
@@ -145,25 +147,25 @@
     "\n",
     "def test(a,b,c,fn):\n",
     "    xs = fn(a,b,c)\n",
-    "    print \"  \",xs\n",
-    "    print \"  errors\",[a*x**2 + b*x + c for x in xs]\n",
+    "    print(\"  \",xs)\n",
+    "    print(\"  errors\",[a*x**2 + b*x + c for x in xs])\n",
     "        \n",
-    "print \"Solutions to\"\n",
-    "print \"x^2-3x-4=0:\"\n",
+    "print(\"Solutions to\")\n",
+    "print(\"x^2-3x-4=0:\")\n",
     "test(1,-3,-4,quad1)\n",
-    "print \"x^2-2x+1=0:\"\n",
+    "print(\"x^2-2x+1=0:\")\n",
     "test(1,-2,1,quad1)\n",
-    "print \"x^2+x+1=0:\"\n",
+    "print(\"x^2+x+1=0:\")\n",
     "test(1,1,1,quad1)\n",
-    "print\n",
-    "print \"Now, some very similar equations\"\n",
-    "print \"x+1=0:\"\n",
+    "print()\n",
+    "print(\"Now, some very similar equations\")\n",
+    "print(\"x+1=0:\")\n",
     "test(0,1,1,quad1)\n",
     "#uh oh, numerical errors\n",
-    "print \"10^-15*x^2+x+1=0:\"\n",
+    "print(\"10^-15*x^2+x+1=0:\")\n",
     "test(1e-15,1,1,quad1)\n",
     "#...are getting worse\n",
-    "print \"10^-17*x^2+x+1=0:\"\n",
+    "print(\"10^-17*x^2+x+1=0:\")\n",
     "test(1e-17,1,1,quad1)"
    ]
   },
@@ -183,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -237,25 +239,25 @@
     "\n",
     "def test(a,b,c,fn):\n",
     "    xs = fn(a,b,c)\n",
-    "    print \"  \",xs\n",
-    "    print \"  errors\",[a*x**2 + b*x + c for x in xs]\n",
+    "    print(\"  \",xs)\n",
+    "    print(\"  errors\",[a*x**2 + b*x + c for x in xs])\n",
     "        \n",
-    "print \"Solutions to\"\n",
-    "print \"x^2-3x-4=0:\"\n",
+    "print(\"Solutions to\")\n",
+    "print(\"x^2-3x-4=0:\")\n",
     "test(1,-3,-4,quad2)\n",
-    "print \"x^2-2x+1=0:\"\n",
+    "print(\"x^2-2x+1=0:\")\n",
     "test(1,-2,1,quad2)\n",
-    "print \"x^2+x+1=0:\"\n",
+    "print(\"x^2+x+1=0:\")\n",
     "test(1,1,1,quad2)\n",
-    "print\n",
-    "print \"Now, some very similar equations\"\n",
-    "print \"x+1=0:\"\n",
+    "print()\n",
+    "print(\"Now, some very similar equations\")\n",
+    "print(\"x+1=0:\")\n",
     "test(0,1,1,quad2)\n",
     "#numerical errors are better\n",
-    "print \"10^-15*x^2+x+1=0:\"\n",
+    "print(\"10^-15*x^2+x+1=0:\")\n",
     "test(1e-15,1,1,quad2)\n",
     "#and at least are correct for the solution that's not so huge\n",
-    "print \"10^-17*x^2+x+1=0:\"\n",
+    "print(\"10^-17*x^2+x+1=0:\")\n",
     "test(1e-17,1,1,quad2)"
    ]
   },
@@ -269,21 +271,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.1"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
