Completed Anatomy of a Robot

--- a/Book.ipynb
+++ b/Book.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "* Section I. Introduction\n",
     "  * [Chapter 1. What is robotics?](WhatIsRobotics.ipynb)\n",
-    "  * [Chapter 2. Anatomy of a robot](AnatomyOfARobot.ipynb) **75% complete**\n",
+    "  * [Chapter 2. Anatomy of a robot](AnatomyOfARobot.ipynb)\n",
     "\n",
     "* Section II. Modeling\n",
     "\n",
@@ -49,7 +49,7 @@
     "* Section V. Perception **incomplete**\n",
     "\n",
     "* Section VI. Learning and Calibration **incomplete**\n",
-    "  * [Chapter 21. Calibration](Calibration.ipynb) **60% complete.**\n",
+    "  * [Chapter 21. Calibration](Calibration.ipynb) **60% complete**\n",
     "\n",
     "* Appendix A. Mathematical Preliminaries\n",
     "\n",
