--- a/AnatomyOfARobot.ipynb
+++ b/AnatomyOfARobot.ipynb
@@ -114,12 +114,67 @@
     "\n",
     "Most of the time, sensors are mounted to a link of the robot, and move while the robot moves.  The raw data produced by the sensor is often not particularly useful in itself (e.g., cameras will give you pixel colors rather than object identities), and perception algorithms must process this data into meaningful quantities.  It is important to build accurate models of the physics behind the sensor (and methods for \"inverting\" these physics) in order to help a robot correlate sensor signals into an understanding of the physical world.\n",
     "\n",
-    "The position and orientation of the sensor on the link is extremely important to be able to make sense of sensor data; we will look into this more when we discuss calibration.\n",
+    "The position and orientation of the sensor on the link is extremely important to be able to make sense of sensor data. A laser sensor may be saying that an obstacle is 1m away, but is the obstacle ahead, behind, to the left, or above the robot?  How close is too close before the robot ends up colliding?  We will look into this issue further  when we discuss calibration.\n",
     "\n",
     "## Actuators and Transmissions\n",
     "\n",
-    "TODO: fill out section\n",
+    "An actuator is a mechanism that generates a force / torque given electrical signals; a transmission is a mechanism that applies an actuator's forces / torques to the robot's links.  Most commonly on industrial robots, actuators are electric motors while the transmissions are some sort of gearing system (e.g., gearbox).  On mobile robots, the transmissions from actuators to the ground are actually the wheels (or tracks).  It is also common to think of (and purchase) the actuator and transmission as a unit, such as with servomotors.\n",
     "\n",
+    "Common actuator types include:\n",
+    "\n",
+    "- *Electric motors*: stepper motors, brushed / brushless DC motors, AC motors. \n",
+    "\n",
+    "- *Pneumatic actuators*. High variation in size and strength\n",
+    "\n",
+    "- *Hydraulic actuators*. Very strong.  \n",
+    "\n",
+    "- *Chemical (combustion) actuators*: internal combustion engines in automobiles and prop planes; turbines in jet planes.\n",
+    "\n",
+    "- *Piezoelectric actuators*\n",
+    "\n",
+    "Actuators can be rotary (revolves around an axis) or linear (translates about an axis).  Each type and model of actuator has many subtle differences that should be taken into account when fine-tuning a robot's design, e.g., in the power source, power / weight ratio, control bandwidth, maximum speed, stroke length, continuous / peak torque, complexity of electronics and maintenance, etc.  Most often, a roboticist will choose between electric, pneumatic, and hydraulic motors.  Electric motors come in a plethora of models with high variation in size, strength, and speed, and are convenient to use. Pneumatic actuators have a higher power-to-weight ratio, and lightweight pistons can be placed on extremities far from from heavy pumps using air lines, but require maintaining complex pump / valve systems.  Hydraulic actuators are stronger and heavier, and have similar drawbacks. \n",
+    "\n",
+    "There are also a variety of problems that arise when an actuator is pushed beyond its safe operating limits.  Electric motors *burn out* when the temperature produced by the motor cannot be dissipated quickly enough, and which burns through the insulation on the motor's wiring.  Pneumatic and hydraulic systems can *blow seals* where the internal pressure overcomes the strength of the seals and gaskets on the pneumatic / hydraulic lines or cylinders. In hydraulic systems, leaks can be quite messy!\n",
+    "\n",
+    "Transmission systems can be quite diverse.  Common forms of transmission include:\n",
+    "\n",
+    "- *Gearing*: gearboxes, lead screws, harmonic drives.  Can convert rotary to linear motion and vice versa.  Must be located directly at the joint.\n",
+    "\n",
+    "- *Cables*: like tendons in biological systems, cables can connect a motor to a far-off link. Usually outputs linear motion, and can only pull.\n",
+    "\n",
+    "- *Wheels / tracks*: used for mobile robots.  Can be arranged in *differential drive*, *skid-steer*, and *Ackermann steering* arrangements.  Omnidirectional (Mechanum) wheels are available on some platforms.\n",
+    "\n",
+    "- *Pneumatic / Hydraulic lines*: connect a pump / valve system to a pneumatic / hydraulic cylinder.\n",
+    "\n",
+    "- *4-bar linkages*: static bars connected by joints, used to convert rotary to linear motion and vice versa.\n",
+    "\n",
+    "- *Flywheels*: use changes of angular momentum to control orientation, used primarily in space robotics.\n",
+    "\n",
+    "- *Propellers*, *aelierons*, and *control surfaces*: deflect a surrounding gaseous / liquid medium to propel the robot; used primarily for aerial and water vehicles.\n",
+    "\n",
+    "- *Thrusters*: eject mass at high speed to exert force using Newton's Law. Used primarily in space robotics.\n",
+    "\n",
+    "- *Feet*, *hands*, *wings*, etc: bioinspired methods to touch the environment / deflect the surrounding medium to propel the robot.\n",
+    "\n",
+    "\n",
+    "When  designing or choosing a transmission systems, a designer must be cognizant of the\n",
+    "\n",
+    "- *Gear reduction*: force multiplier from input to output.\n",
+    "\n",
+    "- *Backlash*: a dead-band about which force is not productively generated when the motion of direction is switched. \n",
+    "\n",
+    "- *Internal friction*: losses of motive force.\n",
+    "\n",
+    "- *Backdrivability*: the ability for forces on the output shaft to be reflected on the input shaft. High backdrivability implies low backlash and low internal friction.\n",
+    "\n",
+    "- *Longevity and durability*: cheap gear teeth may wear down, materials in cables may exhibit creep (stretch), and tires wear down over time.  Transmission systems are often the first parts of robots to break!\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Cognitive Architectures\n",
     "\n",
     "The title of this section is a bit misleading: robots don't perform\n",
@@ -133,8 +188,10 @@
     "referred to as a *cognitive architecture*.\n",
     "\n",
     "(The terminology used in this chapter is highly influenced by Chapter 2\n",
-    "in Stuart and Russell's excellent textbook Artificial Intelligence: a\n",
-    "Modern Approach.)\n",
+    "in Stuart and Russell's excellent textbook *Artificial Intelligence: a\n",
+    "Modern Approach*.)\n",
+    "\n",
+    "### Sense-plan-act framework\n",
     "\n",
     "A cognitive architecture resides in the robot's mind, which controls the\n",
     "robot's body, which interacts with the outside world. The body and\n",
@@ -143,7 +200,7 @@
     "other words, no telepathy is allowed!) The role of a robot's mind is to\n",
     "receive sensor information (sense), do some processing (plan) and to\n",
     "output commands to the body's actuators (act). This perspective is also\n",
-    "known as the *sense-plan-act* framework.\n",
+    "known as the *sense-plan-act* framework, and is illustrated in <a href=\"#fig:SensePlanAct\">Fig. 1</a>.\n",
     "\n",
     "******************\n",
     "\n",
@@ -212,7 +269,36 @@
     "the robot is truly a good measure of performance (as judged by human\n",
     "observers). Section III covers planning in detail.\n",
     "\n",
-    "TODO: describe learning architectures."
+    "Finally, a *learning* architecture incorporates sensor data over time to\n",
+    "automatically adapt components of its predictive models, state estimators,\n",
+    "and/or planners.  The amount of learning can be relatively small, such as\n",
+    "auto-calibration of a robot's sensors to correct for sensor drift, or large,\n",
+    "such as reinforcement learning to adapt the robot's behavior according to\n",
+    "observed outcomes.  Section VI discusses machine learning, calibration, and\n",
+    "reinforcement learning techniques to be used in such architectures.\n",
+    "\n",
+    "\n",
+    "### Perception, planning, and control; hierarchical architectures\n",
+    "\n",
+    "The Plan component of the Sense-Plan-Act framework above can typically be broken down into three components: \n",
+    "\n",
+    "- *Perception*.  From sensor data and memory of the past, construct a representation of all the knowledge the robot has available about itself and its surroundings.  When there is uncertainty, either construct a best guess, or explicitly model how much uncertainty is available.\n",
+    "\n",
+    "- *Planning*.  Use the robot's knowledge representation and dynamics models to decide what the robot should do now and in the future.  Outputs reference motions or feedback policies.\n",
+    "\n",
+    "- *Control*. At a high feedback rate, execute the reference motions generated by planning by outputting actuator signals.  Use immediate sensor feedback to correct for minor disturbances.\n",
+    "\n",
+    "In a complex intelligent robot, such as an autonomous vehicle, these components are individually quite sophisticated.  To optimize the behavior of each component requires deep knowledge, skills, and effort on the part of its engineering team.\n",
+    "\n",
+    "Although these components are described as though they would be separate stages of a pipeline, they actually interact at multiple levels based on the timing requirements of behavioral decisions.  The planning component is usually broken down so that mission-level decisions are made at the highest layer, which are then broken into subtasks that should be achieved on the order of seconds to minutes, which are then finally broken down into continuous reference motions at sub-second granularity.  In some sense, the control component is the lowest level of the planning hierarchy.\n",
+    "\n",
+    "The perception component may also be hierarchical as well. Some sensor signals, like joint encoder values, are processed minimally to be used by the controller.  Others, like vision data, are processed with computationally expensive, relatively slow operations like map-building and object recognition so that mission planning can make significant decisions about the robot's behavior.\n",
+    "\n",
+    "### The end-to-end approach\n",
+    "\n",
+    "In contrast to the perception-planning-control pipeline, the philosophy of *end-to-end* behavior attempts to compress the entire Plan component into a single monolithic function.  Because robot behavior is usually too complex to tune by hand, this philosophy is usually approached via the perspective of *end-to-end learning*, where the robot itself adjusts the behavior of the Plan component to achieve better outcomes.  Recently, this is becoming more a plausible approach given the success of deep neural networks in computer vision and related machine learning fields.\n",
+    "\n",
+    "However, there is still a long way to go before end-to-end robots are practical, and in fact there are *no commercially-significant robots in the world today that are developed using the end-to-end approach*.  Why might this be the case?  One may be that human scientists and engineers have developed exceptionally precise models for robot behavior that can't be matched using model-free approaches.  Another reason may be that the development process for the classical pipeline does a better job of exploiting the ingenuity of human engineering teams by imposing clear roles, responsibilities, and performance metrics for each component.  Indeed, it is very hard to determine why a system built entirely on machine learning made a mistake, which makes debugging and development much more difficult.  A final reason could be that the machine learning community simply does not yet have the right model for robotic cognition, and some breakthrough awaits just around the corner!  (Personally speaking, I enjoy the robot engineering process, and hope for the sake of myself, my colleagues, and my students that this latter scenario does not occur any time soon.)\n"
    ]
   },
   {
@@ -225,21 +311,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.1"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
